# buildorchestration

./: LICENSE  README
orchestratorhost/: build-orchestrator.sh  build.config.sample
xcp-orchestrator/: CHANGELOG.md  Cargo.toml  README.md  deploy.sh  force-run.sh
xcp-orchestrator/iso-agent/: Cargo.toml
xcp-orchestrator/iso-agent/src/: main.rs
xcp-orchestrator/matomete/: iso-agent-main.rs  orchestrator-main.rs  shared-github.rs  shared-lib.rs  shared-storage.rs  shared-util.rs  xoa-vm-agent-main.rs
xcp-orchestrator/orchestrator/: Cargo.toml
xcp-orchestrator/orchestrator/src/: main.rs
xcp-orchestrator/shared/: Cargo.toml
xcp-orchestrator/shared/src/: github.rs  lib.rs  ollama.rs  status.rs  util.rs  version_state.rs
xcp-orchestrator/src/: main.rs
xcp-orchestrator/systemd/: iso-agent.service  iso-agent.timer  xcp-orchestrator.service  xcp-orchestrator.timer  xoa-vm-agent.service  xoa-vm-agent.timer
xcp-orchestrator/xoa-vm-agent/: Cargo.toml  build.config.sample
xcp-orchestrator/xoa-vm-agent/src/: main.rs
