[package]
name = "xcp-orchestrator"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
# Disable default native-tls and toggle pure-rust TLS engine
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
