[package]
name = "orchestrator"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
shared = { path = "../shared" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
